--- a/Views/Tasks/Index.cshtml
+++ b/Views/Tasks/Index.cshtml
@@ -119,16 +119,12 @@
             
             if (draggedItem !== this) {
                 if (isAboveHalf) {
-                    tasksList.insertBefore(draggedItem, e.currentTarget);
-                    
-                    @* curId = curId - 1; *@
+                    tasksList.insertBefore(draggedItem, e.currentTarget);                    
                 }
                 else {
                     tasksList.insertBefore(draggedItem, e.currentTarget.nextSibling);
                     curId +=1;
                 }
-                const id = encodeURIComponent(draggedId);
-                const idTwo = encodeURIComponent(curId);
 
                 console.log(`curId: ${curId}, dragged item id: ${draggedId}`);
 
@@ -137,7 +133,7 @@
                         headers: {
                             'Content-Type': 'application/x-www-form-urlencoded'
                         },
-                        body: 'id=' + id + '&idTwo=' + idTwo
+                        body: 'id=' + draggedId + '&idTwo=' + curId
                     });
             }
 
